# Rust_piscine

arybarsk-00-main/ex01/: min.rs
arybarsk-00-main/ex02/: collatz.rs  print_bytes.rs  yes.rs
arybarsk-00-main/ex03/: fizzbuzz.rs
arybarsk-00-main/ex04/: Cargo.toml
arybarsk-00-main/ex04/src/: other.rs  overflow.rs
arybarsk-00-main/ex05/: Cargo.toml
arybarsk-00-main/ex05/src/: main.rs
arybarsk-00-main/ex06/: Cargo.toml
arybarsk-00-main/ex06/src/: main.rs
arybarsk-01-main/: Cargo.toml
arybarsk-01-main/ex00/src/: lib.rs
arybarsk-01-main/ex01/src/: lib.rs
arybarsk-01-main/ex02/src/: lib.rs
arybarsk-01-main/ex03/src/: lib.rs
arybarsk-01-main/ex04/src/: lib.rs
arybarsk-01-main/ex05/src/: lib.rs
arybarsk-02-main/ex00/src/: main.rs
arybarsk-02-main/ex01/src/: lib.rs
arybarsk-02-main/ex02/src/: lib.rs
arybarsk-02-main/ex03/src/: main.rs
arybarsk-02-main/ex04/: Cargo.toml
arybarsk-02-main/ex04/src/: main.rs
arybarsk-03-main/ex00/: Cargo.toml
arybarsk-03-main/ex00/src/: main.rs
arybarsk-03-main/ex01/src/: lib.rs
arybarsk-03-main/ex02/src/: main.rs
arybarsk-03-main/ex03/src/: main.rs
arybarsk-03-main/ex04/src/: main.rs
arybarsk-04-main/: Cargo.toml
arybarsk-04-main/ex00/src/: main.rs
arybarsk-04-main/ex01/src/: main.rs
arybarsk-04-main/ex02/src/: main.rs
arybarsk-04-main/ex03/src/: main.rs
arybarsk-04-main/ex04/src/: main.rs
arybarsk-05-main/: Cargo.toml
arybarsk-05-main/ex00/src/: lib.rs
arybarsk-05-main/ex01/src/: main.rs
arybarsk-05-main/ex02/src/: lib.rs
arybarsk-06-main/: Cargo.toml
(+2 files in other folders)
