[package]
name = "module00-ex04"
version = "0.1.0"
edition = "2021"
authors = ["rybarska"]
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
default-run = "module00-ex04"
publish = false

[profile.dev]
overflow-checks = true

[profile.release]
strip = "symbols"

[profile.no-overflows]
inherits = "dev"
overflow-checks = false

[[bin]]
name = "module00-ex04"
path = "src/main.rs"

[[bin]]
name = "test-overflows"
path = "src/overflow.rs"

[[bin]]
name = "other"
path = "src/other.rs"

[dependencies]
